# snapnarrate

./: .gitignore  CAPABILITIES.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  sample.txt
scripts/: build.ps1
src/: main.py
src/screen_reader/: cli.py  config.py  extractor_factory.py  icon_utils.py  launch.py  openai_client.py  runtime.py  shortcuts.py  startup.py  ui.py
src/snap_narrate/: __init__.py  __main__.py  capture.py  cli.py  config.py  elevenlabs_client.py  extractor_factory.py  icon_utils.py  launch.py  logging_utils.py  models.py  openai_client.py  pipeline.py  runtime.py  shortcuts.py  startup.py  text_processing.py  ui.py  usage.py
tests/: test_audio_player.py  test_cli_autorun.py  test_config.py  test_dedup.py  test_extractor_factory.py  test_icon_utils.py  test_launch.py  test_ollama_coverage.py  test_parser.py  test_pipeline.py  test_startup_shortcuts.py  test_usage_service.py
